[Reindeer] Add Support for PulseRain Reindeer Soft CPU
*) Add SOC for PulseRain Reindeer
*) Add board Reindeer
*) Add UART driver
*) Add DTS

--- a/arch/riscv32/soc/riscv-privilege/common/CMakeLists.txt
+++ b/arch/riscv32/soc/riscv-privilege/common/CMakeLists.txt
@@ -6,6 +6,6 @@ zephyr_sources(
   soc_common_irq.c
   )
 
-if(NOT(CONFIG_SOC_SERIES_RISCV32_QEMU))
+if(NOT(CONFIG_SOC_SERIES_RISCV32_QEMU) AND NOT(CONFIG_SOC_SERIES_PULSERAIN_REINDEER))
   zephyr_sources(vector.S)
 endif()
