--- a/boards/Kconfig
+++ b/boards/Kconfig
@@ -13,6 +13,12 @@ config QEMU_TARGET
 	  Mark all QEMU targets with this variable for checking whether we are
 	  running in an emulated environment.
 
+config REINDEER_TARGET
+	bool
+	help
+	  Mark all REINDEER targets with this variable
+      
+      
 # Note: $ENV_VAR_BOARD_DIR might be a glob pattern
 
 choice
